  resolve https://rt.cpan.org/Ticket/Display.html?id=7948
- i_writegif_low() wasn't setting the returned global palette, which
  meant a rubbish palette was returned to the user (detected with valgrind)
- built 0.43_02 for testing

0.43_03

- change the "double-include" protection macro that imio.h uses.
- updated download locations for the various libraries that Imager 
  depends on.  Added some advice for cygwin.
- more information on gif library versions in README and Makefile.PL
- creating an image where the size of the allocated image buffer would
  overflow an integer would cause too small a buffer to be allocated.
  This could potentially be a security hole.
  partly resolves https://rt.cpan.org/Ticket/Display.html?id=8213
- set i_format to jpeg for jpeg files and test for it
- set i_format to png when reading png files and test for it
- i_yres was being set to the xres when reading a png file
- added many bad BMP files to test various code paths in bmp.c, and 
  made many minor fixes to bmp.c to make them work:
  - it was possible for various types of read failures to SEGV, both
    as NULL pointer dereferences and buffer overflows
  - some errors, like palettes being too large for the number of bits
    per pixel, were not being caught
  - failing to read all of a packed data structure would not cause
    a read failure
  - invalid compression types were not always caught
  - error messages are more consistent (still not always great messages,
    but one step at a time)
- added bmp_compression_name, bmp_used_colors, bmp_filesize, bmp_bit_count 
  tags on reading a BMP file
- added tools/imager to the distribution.  This is still very 
  experimental and untested.  Patches welcome, if you write tests to go
  with them.

=================================================================

        For latest versions check the Imager-devel pages:
        http://imager.perl.org/

=================================================================
